--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -763,8 +763,9 @@
       "hide_unchanged": "Hide Unchanged",
       "no_differences": "No differences found",
       "total": "Total",
-      "added": "Added",
+      "added_count": "Add",
       "removed": "Removed",
+      "modified_count": "Modify",
       "unchanged": "Unchanged",
       "errors": {
         "empty_input": "Please enter both JSON data",
@@ -798,6 +799,7 @@
       "inline_diff_view": "Inline Diff View",
       "show_only_differences": "Show Only Differences",
       "deleted": "Deleted",
+      "added_item": "Add",
       "moved": "Moved",
       "deleted_marked_red": "deleted content marked red",
       "added_marked_green": "added content marked green",
@@ -855,12 +857,112 @@
         "keywords": "json diff, json compare, difference analysis"
       }
     },
+    "json-key-fixer": {
+      "name": "JSON Key Comparison and Repair Tool",
+      "description": "Automatically detect and repair key structure differences in multilingual translation files",
+      "badge": "Translation File Maintenance",
+      "drag_files": "Drag and drop or click to upload multiple JSON files",
+      "supported_formats": "Supports .json format files",
+      "files": "File List",
+      "select_source_hint": "Select a file as the base source file",
+      "stats": "Difference Statistics",
+      "order_diff": "Order Difference",
+      "missing_keys": "Missing Key",
+      "extra_keys": "Extra Key",
+      "match_rate": "Match Rate",
+      "fix_options": "Repair Options",
+      "fix_order": "Repair Key Order",
+      "fill_missing": "Complete Missing Key (AI Translation)",
+      "remove_extra": "Delete Extra Key",
+      "start_fix": "Start Repair",
+      "fixing": "Repairing",
+      "download_zip": "Download ZIP",
+      "fix_progress": "Repair Progress",
+      "translation_progress": "Translation Progress",
+      "completed": "Completed",
+      "failed": "Failed",
+      "language_detected": "Language Detection",
+      "confidence": "Confidence",
+      "select_source": "Select Source File",
+      "no_source_selected": "Please select a source file as the base first",
+      "fix_complete": "Repair Completed",
+      "download_success": "Download Successful",
+      "upload_success": "Upload Successful",
+      "files_uploaded": "{count} files uploaded",
+      "file_format_error": "Incorrect file format",
+      "not_json_file": "{fileName} is not a JSON file",
+      "file_process_failed": "File processing failed",
+      "invalid_json_format": "Invalid JSON format",
+      "language_detection_failed": "Language detection failed",
+      "files_fixed": "{count} files repaired",
+      "zip_downloaded": "Repaired files have been packaged for download",
+      "view_details": "View Details",
+      "diff_dialog_title": "File Comparison Details",
+      "diff_dialog_description": "View the before and after repair comparison of {fileName}",
+      "diff_stats_order": "Order Difference",
+      "diff_stats_missing": "Missing key",
+      "diff_stats_extra": "Extra key",
+      "diff_stats_match": "Match Rate",
+      "diff_view_title": "JSON Structure Comparison",
+      "diff_view_description": "Red indicates deletion, green indicates addition or modification",
+      "diff_before": "Before Fix (Original File)",
+      "diff_after": "After Fix (Processed)",
+      "introduction": "The JSON Key Comparison and Repair Tool is a professional tool designed for maintaining multilingual translation files. It can automatically detect and repair key structure differences between translation files. Through intelligent language identification, three-dimensional difference analysis (order, missing, redundant), and AI translation completion, it helps development teams maintain the structural consistency of multilingual files. The tool supports batch processing, visual comparison, and one-click repair, greatly improving the maintenance efficiency of internationalization projects.",
+      "features": [
+        "🔍 Intelligent Language Detection - Automatically identify file language based on large models",
+        "📊 Three-Dimensional Difference Analysis - Detect three types of issues: key order, missing keys, and redundant keys",
+        "🤖 AI Translation Completion - Automatically translate missing key content",
+        "🔧 One-Click Batch Repair - Automatically reorder and complete translations",
+        "📦 ZIP Package Download - Batch export of repaired files",
+        "📋 Repair Report Generation - Detailed report in Markdown format",
+        "🎯 Order-Preserving Reconstruction Algorithm - Strictly reconstruct according to the source file order",
+        "⚡ Concurrent Translation Engine - Batch processing of 50 items/batch, efficient processing"
+      ],
+      "faq": [
+        {
+          "question": "When do you need to use the JSON Key Comparison and Repair Tool?",
+          "answer": "When there are key structure inconsistencies between your multilingual translation files (such as zh.json, en.json, de.json), such as some language files missing newly added translation keys, or the key order is chaotic making Git diff difficult to read, this tool can automatically detect and fix these problems."
+        },
+        {
+          "question": "How does the tool detect the language of a file?",
+          "answer": "The tool extracts the first 10 translation texts from the JSON file and sends them to a large model for language identification. The large model analyzes language features, character patterns, and vocabulary, and returns the language code (such as zh, en) and confidence score to ensure accurate identification of the file language."
+        },
+        {
+          "question": "How accurate is the AI translation function?",
+          "answer": "The tool uses the same translation API as i18n-json-translator, adopting a strategy of batch processing 50 items/batch, concurrent 5 requests, and a maximum of 3 retries. The translation accuracy depends on the quality of the large model, and is usually very high for common languages and standard texts. Keys that fail to translate will be marked in the report and can be supplemented manually."
+        },
+        {
+          "question": "Will redundant keys be deleted during repair?",
+          "answer": "By default, they will not be deleted. The tool provides a 'Delete Redundant Keys' option (disabled by default), allowing you to choose whether to remove keys in the target file that are not present in the source file. It is recommended to keep redundant keys to avoid accidental data loss, and you can manually review and decide whether to delete them."
+        },
+        {
+          "question": "What does the downloaded ZIP package contain?",
+          "answer": "The ZIP package contains all the repaired JSON files (keeping the original file names) and a README.md repair report. The report includes a repair overview, translation statistics, and a list of failed keys, making it easy for you to review the repair results and manually handle failed items."
+        }
+      ],
+      "meta": {
+        "title": "JSON Key Comparison and Repair Tool - Multilingual Translation File Maintenance",
+        "description": "Online JSON Key Comparison and Repair Tool, automatically detects and repairs structural differences in multilingual translation files, intelligently completes missing keys, and improves internationalization maintenance efficiency.",
+        "keywords": "JSON Key Repair, Translation File Maintenance, Multilingual Tool, i18n Tool"
+      }
+    },
     "base64-encoder-decoder": {
       "name": "Base64 Encoder/Decoder",
       "description": "Base64 string encoding and decoding tool",
       "placeholder": "Enter text to encode/decode...",
       "encode": "Encode",
       "decode": "Decode",
+      "input_title": "Input Text",
+      "output_title": "Output Result",
+      "output_desc": "Encoded/decoded text",
+      "output_placeholder": "Encoding/decoding result will appear here...",
+      "invalid_base64": "Invalid Base64 format",
+      "batch_mode": "Batch Mode",
+      "batch_mode_desc": "Process line by line, encode/decode each line independently",
+      "batch_placeholder": "Enter text for batch encoding/decoding, one item per line...",
+      "upload_file": "Upload TXT File",
+      "file_type_error": "Only .txt files are supported",
+      "file_read_error": "File read failed, please try again",
       "introduction": "Base64 Encoder/Decoder is a professional string encoding conversion tool that supports bidirectional conversion between text, binary data, and Base64 format. Widely used in web development, data transmission, email attachments, and image encoding scenarios. Uses standard Base64 character set to ensure encoding and decoding accuracy and compatibility, making it an essential tool for developers and technical personnel.",
       "features": [
         "🔄 Bidirectional encoding and decoding between text and Base64",
@@ -894,17 +996,6 @@
           "answer": "No, Base64 is encoding, not encryption. It's just a data representation conversion that anyone can easily decode. If data security is needed, you should first encrypt the data then Base64 encode it, or use dedicated encryption tools."
         }
       ],
-      "input_title": "Input Text",
-      "output_title": "Output Result",
-      "output_desc": "Encoded/decoded text",
-      "output_placeholder": "Encoding/decoding result will appear here...",
-      "invalid_base64": "Invalid Base64 format",
-      "batch_mode": "Batch Mode",
-      "batch_mode_desc": "Process line by line, encode/decode each line independently",
-      "batch_placeholder": "Enter text for batch encoding/decoding, one item per line...",
-      "upload_file": "Upload TXT File",
-      "file_type_error": "Only .txt files are supported",
-      "file_read_error": "File read failed, please try again",
       "encoded": "Encoded successfully",
       "decoded": "Decoded successfully",
       "meta": {
@@ -919,6 +1010,11 @@
       "placeholder": "Enter URL or text to encode/decode...",
       "encode": "Encode",
       "decode": "Decode",
+      "input_title": "Input Text/URL",
+      "output_title": "Output Result",
+      "output_desc": "Encoded/decoded URL",
+      "output_placeholder": "Encoding/decoding result will appear here...",
+      "invalid_url": "Invalid URL encoding format",
       "introduction": "URL Encoder/Decoder is a professional web address processing tool that supports URL string encoding and decoding operations. Follows RFC 3986 standards and can correctly handle Chinese, special characters, and spaces in URL conversion. Widely used in web development, API calls, and search engine optimization scenarios to ensure correct URL transmission and parsing.",
       "features": [
         "🌐 Standard URL encoding/decoding following RFC 3986 specifications",
@@ -952,11 +1048,6 @@
           "answer": "Decoding failure usually occurs because: 1) Incorrect URL encoding format; 2) Invalid hexadecimal characters; 3) Incomplete encoding. Check if the URL is valid, ensure % is followed by two valid hexadecimal digits, and try partial decoding if necessary."
         }
       ],
-      "input_title": "Input Text/URL",
-      "output_title": "Output Result",
-      "output_desc": "Encoded/decoded URL",
-      "output_placeholder": "Encoding/decoding result will appear here...",
-      "invalid_url": "Invalid URL encoding format",
       "encoded": "Encoded successfully",
       "decoded": "Decoded successfully",
       "meta": {
@@ -1357,9 +1448,6 @@
       "placeholder": "Enter text to calculate SHA1 hash...",
       "generate": "Generate SHA1",
       "input_title": "Input Text",
-      "output_title": "SHA1 Hash",
-      "output_desc": "Generated SHA1 hash value",
-      "output_placeholder": "SHA1 hash will appear here...",
       "introduction": "SHA1 Hash Generator is a secure hash algorithm tool that converts data of any length into a fixed-length 160-bit (40 hexadecimal characters) digest. SHA1 is more secure than MD5 and widely used in digital signatures, version control systems, and data integrity verification. While SHA1 is no longer recommended for high-security applications, it still plays an important role in many legacy systems.",
       "features": [
         "🔐 Standard SHA1 algorithm implementation, 160-bit secure hash",
@@ -1393,6 +1481,9 @@
           "answer": "SHA1 outputs 160-bit binary data, usually represented as 40 hexadecimal characters (0-9 and a-f). For example: da39a3ee5e6b4b0d3255bfef95601890afd80709. Regardless of input length, SHA1 output is always 40 characters."
         }
       ],
+      "output_title": "SHA1 Hash",
+      "output_desc": "Generated SHA1 hash value",
+      "output_placeholder": "SHA1 hash will appear here...",
       "meta": {
         "title": "SHA1 Generator - Free Online Hash Calculator Tool",
         "description": "Calculate SHA1 hash for data verification and version control. Free online SHA-1 generator used by Git and checksum validation.",
