--- a/src/i18n/messages/ja.json
+++ b/src/i18n/messages/ja.json
@@ -27,18 +27,18 @@
     "back_to_home": "ホームへ戻る",
     "close": "閉じる",
     "languages": {
-      "en": "英語",
-      "zh": "中国語",
-      "es": "スペイン語",
-      "de": "ドイツ語",
-      "fr": "フランス語",
-      "it": "イタリア語",
-      "pt": "ポルトガル語",
-      "ru": "ロシア語",
+      "en": "English",
+      "zh": "中文",
+      "es": "Español",
+      "de": "Deutsch",
+      "fr": "Français",
+      "it": "Italiano",
+      "pt": "Português",
+      "ru": "Русский",
       "ja": "日本語",
-      "ko": "韓国語",
-      "ar": "アラビア語",
-      "hi": "ヒンディー語"
+      "ko": "한국어",
+      "ar": "العربية",
+      "hi": "हिंदी"
     }
   },
   "theme": {
