--- a/src/i18n/messages/ko.json
+++ b/src/i18n/messages/ko.json
@@ -27,18 +27,18 @@
     "back_to_home": "홈으로 돌아가기",
     "close": "닫기",
     "languages": {
-      "en": "영어",
-      "zh": "중국어",
-      "es": "스페인어",
-      "de": "독일어",
-      "fr": "프랑스어",
-      "it": "이탈리아어",
-      "pt": "포르투갈어",
-      "ru": "러시아어",
-      "ja": "일본어",
+      "en": "English",
+      "zh": "中文",
+      "es": "Español",
+      "de": "Deutsch",
+      "fr": "Français",
+      "it": "Italiano",
+      "pt": "Português",
+      "ru": "Русский",
+      "ja": "日本語",
       "ko": "한국어",
-      "ar": "아랍어",
-      "hi": "힌디어"
+      "ar": "العربية",
+      "hi": "हिंदी"
     }
   },
   "theme": {
