--- a/src/i18n/messages/ru.json
+++ b/src/i18n/messages/ru.json
@@ -27,18 +27,18 @@
     "back_to_home": "Вернуться на главную страницу",
     "close": "Закрыть",
     "languages": {
-      "en": "Английский",
-      "zh": "Китайский",
-      "es": "Испанский",
-      "de": "Немецкий",
-      "fr": "Французский",
-      "it": "Итальянский",
-      "pt": "Португальский",
+      "en": "English",
+      "zh": "中文",
+      "es": "Español",
+      "de": "Deutsch",
+      "fr": "Français",
+      "it": "Italiano",
+      "pt": "Português",
       "ru": "Русский",
-      "ja": "Японский",
-      "ko": "Корейский",
-      "ar": "Арабский",
-      "hi": "Хинди"
+      "ja": "日本語",
+      "ko": "한국어",
+      "ar": "العربية",
+      "hi": "हिंदी"
     }
   },
   "theme": {
