--- a/src/i18n/messages/ar.json
+++ b/src/i18n/messages/ar.json
@@ -27,18 +27,18 @@
     "back_to_home": "العودة إلى الصفحة الرئيسية",
     "close": "إغلاق",
     "languages": {
-      "en": "الإنجليزية",
-      "zh": "الصينية",
-      "es": "الإسبانية",
-      "de": "الألمانية",
-      "fr": "الفرنسية",
-      "it": "الإيطالية",
-      "pt": "البرتغالية",
-      "ru": "الروسية",
-      "ja": "اليابانية",
-      "ko": "الكورية",
+      "en": "English",
+      "zh": "中文",
+      "es": "Español",
+      "de": "Deutsch",
+      "fr": "Français",
+      "it": "Italiano",
+      "pt": "Português",
+      "ru": "Русский",
+      "ja": "日本語",
+      "ko": "한국어",
       "ar": "العربية",
-      "hi": "الهندية"
+      "hi": "हिंदी"
     }
   },
   "theme": {
