--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -27,17 +27,17 @@
     "back_to_home": "होम पर वापस",
     "close": "बंद करें",
     "languages": {
-      "en": "अंग्रेज़ी",
-      "zh": "चीनी",
-      "es": "स्पेनिश",
-      "de": "जर्मन",
-      "fr": "फ्रेंच",
-      "it": "इतालवी",
-      "pt": "पुर्तगाली",
-      "ru": "रूसी",
-      "ja": "जापानी",
-      "ko": "कोरियाई",
-      "ar": "अरबी",
+      "en": "English",
+      "zh": "中文",
+      "es": "Español",
+      "de": "Deutsch",
+      "fr": "Français",
+      "it": "Italiano",
+      "pt": "Português",
+      "ru": "Русский",
+      "ja": "日本語",
+      "ko": "한국어",
+      "ar": "العربية",
       "hi": "हिंदी"
     }
   },
